# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:private"],
)

cc_binary(
    name = "libink.so",
    linkopts = [
        # Use a linker script to limit exported symbols to JNI functions.
        "-Wl,--version-script=$(location :jni.lds)",
        # Suppress undefined symbol errors in the linker script so we don't have
        # to remember to add JNI_OnLoad or similar functions to it later.
        "-Wl,-undefined-version",
    ],
    linkshared = 1,
    linkstatic = 1,
    deps = [
        ":jni.lds",
        "//ink/color/internal/jni:native",
        "//ink/geometry/internal/jni:native",
        "//ink/rendering/skia/common_internal/jni:native",
        "//ink/strokes/internal/jni:native",
    ],
)
